--- a/frontend/app/public/styles.css
+++ b/frontend/app/public/styles.css
@@ -9,6 +9,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: var(--text);
 }
 html {
   font-family: "Lora", serif;
@@ -40,17 +41,20 @@ p {
 .apartment-cards {
   background-color: var(--background);
   text-align: center;
-  color: var(--text);
   padding: 18px;
 }
-.apartment-cards h2 {
+.apartment-cards h2,
+.apartment-hero h2 {
   padding: 5px;
 }
 .container {
-  display: flex;
-  justify-content: center;
-  gap: 36px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
   padding: 24px;
+  max-width: 70%;
+  margin: 0 auto;
 }
 .card {
   background-color: white;
@@ -58,13 +62,46 @@ p {
   border-radius: var(--radius);
   display: flex;
   flex-direction: column;
-  max-width: 350px;
-  min-height: 400px;
 }
-.card-image {
-  height: 200px;
+.image {
+  width: 100%;
+  height: auto;
   border-radius: var(--radius);
 }
 .card h3 {
   padding: 16px;
+}
+.apartment-hero {
+  text-align: center;
+  padding: 18px;
+  padding-bottom: 50px;
+}
+.item {
+  background-color: #8fa78f;
+  grid-column: 1/4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  border-radius: var(--radius);
+}
+.item h3 {
+  color: white;
+  grid-row: 2/4;
+  padding: 0px 20px;
+  grid-column: 3/4;
+  justify-self: center;
+}
+.item button {
+  grid-row: 4/5;
+  width: 50%;
+  height: 40px;
+  justify-self: center;
+  background-color: white;
+  border: none;
+  border-radius: 20px;
+}
+.item img {
+  grid-column: 1/3;
+  grid-row: 1/5;
+  height: auto;
 }
