--- a/frontend/app/public/styles.css
+++ b/frontend/app/public/styles.css
@@ -11,7 +11,8 @@
   box-sizing: border-box;
   color: var(--text);
 }
-html {
+html,
+button {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -21,21 +22,27 @@ header {
   padding: 20px;
   text-align: center;
 }
-header h1 {
+header h2 {
   color: white;
-  font-size: 36px;
+}
+h1 {
+  font-size: 40px;
   font-weight: 300;
 }
 h2 {
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 300;
 }
 h3 {
-  font-size: 24px;
+  font-size: 32px;
+  font-weight: 300;
+}
+h4 {
+  font-size: 26px;
   font-weight: 300;
 }
 p {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 300;
 }
 .apartment-cards {
@@ -43,17 +50,16 @@ p {
   text-align: center;
   padding: 18px;
 }
-.apartment-cards h2,
-.apartment-hero h2 {
+.apartment-cards h3,
+.apartment-hero h3 {
   padding: 5px;
 }
 .container {
-  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 30px;
+  column-gap: 40px;
   padding: 24px;
-  max-width: 70%;
+  max-width: 80%;
   margin: 0 auto;
 }
 .card {
@@ -68,12 +74,14 @@ p {
   height: auto;
   border-radius: var(--radius);
 }
-.card h3 {
+.card h4 {
   padding: 16px;
 }
 .apartment-hero {
   text-align: center;
   padding: 18px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   padding-bottom: 50px;
 }
 .item {
@@ -84,24 +92,262 @@ p {
   grid-template-rows: repeat(4, 1fr);
   border-radius: var(--radius);
 }
-.item h3 {
+.item h4 {
   color: white;
   grid-row: 2/4;
   padding: 0px 20px;
   grid-column: 3/4;
   justify-self: center;
 }
-.item button {
-  grid-row: 4/5;
-  width: 50%;
-  height: 40px;
-  justify-self: center;
-  background-color: white;
-  border: none;
-  border-radius: 20px;
-}
+
 .item img {
   grid-column: 1/3;
   grid-row: 1/5;
   height: auto;
+}
+.hero {
+  position: relative;
+  width: 100%;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-text {
+  position: absolute;
+  width: 80%;
+  top: 20%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 24px;
+}
+.hero-text h1,
+.hero-text h4 {
+  padding-left: 14px;
+  grid-column: 1/3;
+  padding-right: 42px;
+}
+.hero-text h4 {
+  margin-top: 5px;
+}
+.more {
+  font-size: 20px;
+  grid-row: 4/5;
+  width: 50%;
+  height: 45px;
+  justify-self: center;
+  background-color: white;
+  border: none;
+  border-radius: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 10px;
+}
+
+@media only screen and (max-width: 1220px) {
+  h1 {
+    font-size: 34px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 26px;
+  }
+  h4 {
+    font-size: 22px;
+  }
+  p {
+    font-size: 16px;
+  }
+  .more {
+    width: 40%;
+    height: 38px;
+    font-size: 16px;
+  }
+  .apartment-hero {
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+  .container {
+    column-gap: 30px;
+  }
+  .card {
+    padding: 12px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 26px;
+  }
+  h3 {
+    font-size: 22px;
+  }
+  h4 {
+    font-size: 18px;
+  }
+  p {
+    font-size: 16px;
+  }
+  .more {
+    width: 37%;
+    height: 30px;
+    font-size: 14px;
+    column-gap: 6px;
+  }
+  .container {
+    column-gap: 20px;
+  }
+  .apartment-hero {
+    margin-top: 20px;
+    margin-bottom: 0px;
+  }
+  .card h4 {
+    padding: 10px;
+  }
+  .hero-text {
+    top: 15%;
+  }
+  .item h4 {
+    padding: 0px 10px;
+  }
+  .card {
+    padding: 10px;
+  }
+}
+
+@media only screen and (max-width: 748px) {
+  h1 {
+    font-size: 24px;
+  }
+  h2 {
+    font-size: 22px;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 14px;
+  }
+  .more {
+    width: 37%;
+    height: 30px;
+    font-size: 12px;
+    column-gap: 6px;
+  }
+  .container {
+    column-gap: 20px;
+  }
+  .apartment-hero {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    padding-bottom: 30px;
+  }
+  .card h4 {
+    padding: 8px;
+  }
+  .hero-text {
+    top: 10%;
+  }
+  .hero-text h1,
+  .hero-text h4 {
+    padding-right: 28px;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  h1 {
+    font-size: 18px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  h4 {
+    font-size: 12px;
+  }
+  p {
+    font-size: 12px;
+  }
+  header {
+    padding: 15px;
+  }
+  .more {
+    width: 37%;
+    height: 26px;
+    font-size: 10px;
+    column-gap: 2px;
+  }
+  .container {
+    column-gap: 10px;
+  }
+  .apartment-hero {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+  }
+  .card h4 {
+    padding: 8px;
+  }
+  .card {
+    padding: 8px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  h4 {
+    font-size: 10px;
+  }
+  p {
+    font-size: 10px;
+  }
+  .more {
+    width: 37%;
+    height: 20px;
+    font-size: 8px;
+    column-gap: 2px;
+  }
+  .card {
+    padding: 6px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  h1 {
+    font-size: 14px;
+  }
+  h2 {
+    font-size: 14px;
+  }
+  h3 {
+    font-size: 12px;
+  }
+  h4 {
+    font-size: 8px;
+  }
+  p {
+    font-size: 8px;
+  }
+  .more {
+    width: 35%;
+    height: 15px;
+    font-size: 6px;
+    column-gap: 2px;
+  }
+  .card {
+    padding: 6px;
+  }
 }
