--- a/frontend/app/public/styles.css
+++ b/frontend/app/public/styles.css
@@ -144,12 +144,24 @@ p {
   height: 45px;
   justify-self: center;
   background-color: white;
-  border: none;
   border-radius: 22px;
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 10px;
+}
+.contact{
+  width: 90%;
+  height: 45px;
+  font-size: 20px;
+  background-color: var(--header);
+  color: white;
+  display: flex;
+  border-radius: var(--radius);
+  border: none;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto 0 auto;
 }
 
 .link {
@@ -191,7 +203,7 @@ p {
 }
 .verge3d-app {
   grid-column: 1 / 4;
-  z-index: 999;
+  z-index: 1;
   position: relative;
   height: 100%;
   width: 100%;
@@ -220,25 +232,91 @@ p {
   padding: 20px;
   border-radius: var(--radius);
 }
+.info{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 85%;
+}
 .toggle-button {
   background: none;
   border: none;
   display: flex;
   justify-content: space-between;
-  padding: 15px 5px;
+  padding: 5px;
   align-items: center;
 }
 .more-details {
-  max-height: 200px;
+  max-height: 150px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 12px;
-  padding: 10px;
+  padding: 0px 8px;
 }
 
 iframe {
   border: 0;
+}
+
+form{
+  background-color: white;
+  border-radius: var(--radius);
+  padding: 3rem;
+}
+
+form label{
+  display: block;
+  margin-bottom: 10px;
+}
+form h4{
+  padding-bottom: 10px;
+}
+
+form p{
+  padding-top: 15px;
+}
+form input,
+form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.8rem;
+  border-radius: var(--radius);
+  border: 1px solid var(--text);
+  margin-bottom: 10px;
+  font-family: inherit;
+  font-size: 15px;
+}
+
+form textarea {
+  resize: none;
+}
+.form-button{
+  margin-top: 30px;
+  height: 40px;
+  width: 20%;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: none;
+  border-radius: var(--radius);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  padding: 0;
+  overflow: hidden;
+  z-index: 2;
 }
 
 @media only screen and (max-width: 1220px) {
